initial commit with changes

--- a/TaskAssignmentSystem/appsettings.json
+++ b/TaskAssignmentSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8JU1TDR\\SQLEXPRESS;Database=TaskAssignmentSystemDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=DESKTOP-8JU1TDR\\SQLEXPRESS;Database=TaskAssignmentSystemDb;User ID=sa;Password=sasa;TrustServerCertificate=True;"
   },
   "AppSettings": {
     "ApiBaseUrl": "https://localhost:5001/api"
